# MAKEFILE_Learn

./: CMakeLists.txt  cheatsheet  main.cpp  makefile  makefile_rev1  makefile_rev2  makefile_rev3  module1.cpp  module1.h  module2.cpp  module2.h  result.out
module1_lib/: Findlibmodule1.cmake
my_lib/: CMakeLists.txt
src/: main.cpp  module2.cpp
subdir/: makefile  sub_module.cpp  sub_module.h
